<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">LV1</string>
    <string name="todo">TODO</string>
    <string name="full_name">Full Name</string>
    <string name="desc">Description</string>
    <string name="fullName">Full Name</string>
    <string name="enter">Enter</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="calc">Calculate</string>
</resources>